Fix the unit test