@@ -5,15 +5,18 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import org.frankframework.credentialprovider.ICredentials;
@@ -21,11 +24,10 @@ import org.frankframework.credentialprovider.util.CredentialConstants;
 
 public class DelineaCredentialFactoryTest {
 
-	private static final DelineaCredentialFactory credentialFactory = new DelineaCredentialFactory();
-	private static final DelineaClient client = mock(DelineaClient.class);
+	private DelineaCredentialFactory credentialFactory;
 
-	@BeforeAll
-	public static void setUpBeforeClass() {
+	@BeforeEach
+	public void beforeEach() {
 		Secret secret1 = createSecret(1, 11, "user1", "password1");
 		Secret secret2 = createSecret(2, 22, "user2", "password2");
 		Secret secret3 = createSecret(3, 33, "user3", "password3");
@@ -34,10 +36,14 @@ public class DelineaCredentialFactoryTest {
 		List<String> list = Stream.of(secret1, secret2, secret3, secret4)
 				.map(Secret::id)
 				.map(Objects::toString)
-				.toList();
+				.collect(Collectors.toList());
 
-		when(client.getSecret("1", null)).thenReturn(secret1);
+		DelineaClient client = mock(DelineaClient.class);
 
+		// Get secret
+		when(client.getSecret(eq("1"), eq(null))).thenReturn(secret1);
+
+		// Get secrets
 		when(client.getSecrets()).thenReturn(list);
 
 		// setup constants
@@ -45,8 +51,17 @@ public class DelineaCredentialFactoryTest {
 		CredentialConstants.getInstance().setProperty(DelineaCredentialFactory.OAUTH_TOKEN_URL_KEY, "http://localhost:8080");
 		CredentialConstants.getInstance().setProperty(DelineaCredentialFactory.TENANT_KEY, "testTenant");
 
+		credentialFactory = new DelineaCredentialFactory();
 		credentialFactory.setDelineaClient(client);
 		credentialFactory.initialize();
+	}
+
+	@AfterAll
+	public static void tearDown() {
+		// Since credential constants is a singleton, make sure to clean up what we set up in the beforeEach
+		CredentialConstants.getInstance().remove(DelineaCredentialFactory.API_ROOT_URL_KEY);
+		CredentialConstants.getInstance().remove(DelineaCredentialFactory.OAUTH_TOKEN_URL_KEY);
+		CredentialConstants.getInstance().remove(DelineaCredentialFactory.TENANT_KEY);
 	}
 
 	@Test
@@ -68,9 +83,8 @@ public class DelineaCredentialFactoryTest {
 		// Get a non-existing secret
 		ICredentials credentials2 = credentialFactory.getCredentials("16", () -> null, () -> null);
 
-		// Expect a non-null return value, with a null username - the defaultUsernameSupplier (() -> null) is used
-		assertNotNull(credentials2);
-		assertNull(credentials2.getUsername());
+		// Expect a null return value, because alias 16 does not exist
+		assertNull(credentials2);
 	}
 
 	static Secret createSecret(int id, int folderId, String username, String password) {
